@@ -13,6 +13,7 @@ This document provides a high-level view of the changes introduced by release.
 - search-everywhere also finds attribute declarations
 - fix monospace formatting in description lists
 - allow curly braces in block IDs, as they can be used as attributes
+- don't try to resolve links with unresolved or ambiguous variants; don't resolve links starting at root level or lead to URLs, resolve attributes in anchors
 
 === 0.30.50 (preview, available from GitHub releases)
 
